[gd_scene load_steps=4 format=3 uid="uid://dn6somqgjivac"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_7gpj7"]

[sub_resource type="Gradient" id="Gradient_2ddkd"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yj4tt"]
gradient = SubResource("Gradient_2ddkd")

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gpj7")
scenePath = "res://scenes/ui/menu/title_screen.tscn"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_yj4tt")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Your Time:"

[node name="PlayAgain" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play Again"

[node name="Quit" type="Button" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
